--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "start": "node ./index.js",
-    "devstart": "nodemon ./index.js"
+    "devstart": "nodemon ./index.js",
+    "sequelize": "sequelize --options-path=config/sequelize_init.js"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -26,7 +27,10 @@
     "helmet": "3.11.0",
     "jsonwebtoken": "8.1.1",
     "sequelize": "^5.8.9",
-    "sequelize-cli": "^5.5.0"
+    "sequelize-cli": "^5.5.0",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "nodemon": "1.14.12"
