--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "homepage": "https://github.com/Mixermachine/StudyHub-backend",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "start": "node ./index.js",
-    "devstart": "nodemon ./index.js",
+    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 0",
+    "start": "cross-env NODE_ENV=production node ./index.js",
+    "devstart": "cross-env NODE_ENV=development nodemon ./index.js",
     "generate_db": "sequelize db:create"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.2",
+    "cross-env": "^5.2.0",
     "express": "4.16.2",
     "helmet": "3.11.0",
     "jsonwebtoken": "8.1.1",
@@ -32,7 +33,8 @@
     "sequelize-cli": "^5.5.0",
     "sqlite3": "^4.0.9",
     "swagger-jsdoc": "^3.2.9",
-    "swagger-ui-express": "^4.0.6"
+    "swagger-ui-express": "^4.0.6",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "1.14.12"
