--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "cross-env NODE_ENV=production node ./index.js",
     "devstart": "cross-env NODE_ENV=development nodemon ./index.js",
     "db_reset": "cross-env NODE_ENV=development sequelize db:drop && sequelize db:create",
-    "db_seed": "sequelize db:seed:all"
+    "db_seed": "cross-env NODE_ENV=development sequelize db:seed:all"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
