--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sqlite3": "^4.0.9",
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.6",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-context": "0.0.7"
   },
   "devDependencies": {
     "nodemon": "1.14.12"
