--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "1.18.2",
     "cross-env": "^5.2.0",
     "express": "4.16.2",
+    "gmail-send": "^1.2.14",
     "helmet": "3.11.0",
     "jsonwebtoken": "8.1.1",
     "pg": "^7.11.0",
