--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.2",
     "cross-env": "^5.2.0",
+    "currency-symbol-map": "^4.0.4",
     "express": "4.16.2",
     "gmail-send": "^1.2.14",
     "helmet": "3.11.0",
